# dmm-scp-techer

./: .env.example  .gitignore  README.md  pyproject.toml  teacher_urls.json  teachers.txt  test_reservation.py  test_reservation_detailed.py
.github/workflows/: deploy-frontend.yml  deploy.yml  schedule.yml  update-data.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: data.json
frontend/src/: App.css  App.js  App.tsx  main.js
src/dmm-scp-techer/: __init__.py  __main__.py  scraper.py  scraper_discord.py  test_scraper.py
