[project]
name = "dmm-scp-techer"
version = "0.1.0"
description = "DMM英会話の先生の予約状況をスクレイピングして、預約可時にDiscordに通知"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dmm_scp_techer"]
